--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,9 +2,20 @@ env:
   node: true
   browser: true
   es2021: true
+
+plugins:
+  - babel
+
 extends: airbnb-base
+
 overrides: []
+
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: {}
+
+rules:
+  no-console: 0
+  import/extensions: 0
+  no-param-reassign: 0
+  no-underscore-dangle: [2, { 'allow': ['__filename', '__dirname'] }]
