--- a/package.json
+++ b/package.json
@@ -3,15 +3,40 @@
   "version": "1.0.0",
   "type": "module",
   "description": "RSS-aggregator",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "aleksandr cherkasin",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aleksusergit/frontend-project-11.git"
+  },
+  "author": "Aleksandr Cherkasin",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/aleksusergit/frontend-project-11/issues"
+  },
+  "homepage": "https://github.com/aleksusergit/frontend-project-11#readme",
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@webpack-cli/generators": "^3.0.1",
+    "babel-loader": "^9.1.0",
+    "css-loader": "^6.7.3",
     "eslint": "^8.38.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5"
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.27.5",
+    "html-webpack-plugin": "^5.5.1",
+    "postcss-loader": "^7.2.4",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
+    "webpack": "^5.80.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "bootstrap": "^5.2.3"
   }
 }
