--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "RSS-reader is a service for aggregating RSS-feeds, which makes it easy to read a variety of sources",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production --node-env=production"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
